Fix browsertests failures when FieldTrialSynchronizer is created early.

The tests are failed due to FieldTrialSynchronizer is created early and posts
task to BrowserThread::UI before the UI thread is initialized. In this case,
the FieldTrialSynchronizer doesn't need to post task to UI thread since the
renderers are not created yet.

Bug: 892636
Change-Id: Ib7d46709f3fca6a749b82d0ba2f601dcf551a8d0
Reviewed-on: https://chromium-review.googlesource.com/c/1264737
Commit-Queue: Xi Han <hanxi@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597140}
Former-commit-id: ce5bd26bf2cca25e4cba92df9dd2d972606a5e7d